Fix : Controller view on mobile

--- a/src/styles/Controller.module.scss
+++ b/src/styles/Controller.module.scss
@@ -46,6 +46,22 @@
       text-shadow: 0px 0px 6.4px rgba(216, 87, 91, 0.7);
     }
   }
+
+  svg {
+    @media screen and (max-width: 768px) {
+      scale: 0.7;
+    }
+  }
+
+  @media (max-width: 768px) {
+    bottom: 10px;
+    left: 5px;
+    padding: 0.1rem 0.6rem 0.1rem 0.2rem;
+    font-size: 1rem;
+    gap: 0.2rem;
+    width: 100px;
+    height: 40px;
+  }
 }
 
 .pageNumber {
@@ -73,5 +89,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 5px;
+  }
+
+  @media (max-width: 768px) {
+    bottom: 5px;
+    right: 0px;
+    scale: 0.7;
   }
 }
